dev mode in docker

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,6 +2,7 @@ FROM node:11.6-alpine
 
 WORKDIR ./app
 
+RUN npm install -g nodemon
 COPY ./package.json ./
 RUN npm install
 COPY . .
@@ -12,4 +13,4 @@ ENV DB_NAME=movies-db
 ENV DB_USER=super_user
 ENV DB_PASS=p@ssw0rd
 
-CMD ["npm", "run", "start"]
+CMD ["nodemon", "index.js"]
