--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "PORT=8080 DB_HOST=localhost:27017 DB_USER=\"super_user\" DB_PASS=\"p@ssw0rd\" DB_NAME=\"movies-db\" nodemon index.js",
+    "dev": "docker run -p 8080:8080 -v \"$(pwd)\":/app docker-node-backend:latest",
     "start": "node index.js"
   },
   "author": "",
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "mongoose": "^5.4.4"
+    "mongoose": "^5.4.4",
+    "nodemon": "^1.18.9"
   }
 }
