--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,18 @@
-# sudo: required
+sudo: required
 
-# services:
-#   - docker
+services:
+  - docker
 
-# branches:
-#   only:
-#     - master
+branches:
+  only:
+    - master
 
-# script:
-#   - $(aws ecr get-login --no-include-email --region ap-southeast-1)
-#   - docker build -t movies-backend .
-#   - docker tag movies-backend:latest 187325535940.dkr.ecr.ap-southeast-1.amazonaws.com/movies-backend:latest
-#   - docker push 187325535940.dkr.ecr.ap-southeast-1.amazonaws.com/movies-backend:latest
-#   - aws ecs update-service --service movies-service-v5 --cluster movies-app-cluster2 --force-new-deploy 
+install:
+  - pip install awscli
+
+script:
+  - $(aws ecr get-login --no-include-email --region ap-southeast-1)
+  - docker build -t movies-backend .
+  - docker tag movies-backend:latest 187325535940.dkr.ecr.ap-southeast-1.amazonaws.com/movies-backend:latest
+  - docker push 187325535940.dkr.ecr.ap-southeast-1.amazonaws.com/movies-backend:latest
+  # - aws ecs update-service --service movies-service-v5 --cluster movies-app-cluster2 --force-new-deploy 
