--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 sudo: required
 
+env:
+  global:
+    - PATH=$HOME/.local/bin:$PATH
+
 services:
   - docker
 
@@ -8,7 +12,7 @@ branches:
     - master
 
 install:
-  - pip install awscli
+  - pip install --user awscli
 
 script:
   - $(aws ecr get-login --no-include-email --region ap-southeast-1)
