--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 
 script:
   # - $(aws ecr get-login --no-include-email --region ap-southeast-1)
-  - echo $DB_USER
+  - echo "$DB_USER"
   - docker build --build-arg DB_HOST=$DB_HOST --build-arg DB_USER=$DB_USER --build-arg DB_PASS=$DB_PASS --build-arg PORT=$PORT --build-arg DB_NAME=$DB_NAME -t movies-backend .
   # - docker tag movies-backend:latest 187325535940.dkr.ecr.ap-southeast-1.amazonaws.com/movies-backend:latest
   # - docker push 187325535940.dkr.ecr.ap-southeast-1.amazonaws.com/movies-backend:latest
