--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
 script:
   # - $(aws ecr get-login --no-include-email --region ap-southeast-1)
   - echo "$DB_USER"
-  - docker build --build-arg db_host="$DB_HOST" --build-arg db_user=$DB_USER --build-arg db_pass=$DB_PASS --build-arg PORT=$PORT --build-arg db_name=$DB_NAME -t movies-backend .
+  - docker build --build-arg db_host="$DB_HOST" --build-arg db_user=$DB_USER --build-arg db_pass=$DB_PASS --build-arg port=$PORT --build-arg db_name=$DB_NAME -t movies-backend .
   # - docker tag movies-backend:latest 187325535940.dkr.ecr.ap-southeast-1.amazonaws.com/movies-backend:latest
   # - docker push 187325535940.dkr.ecr.ap-southeast-1.amazonaws.com/movies-backend:latest
   - docker run movies-backend
